--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(./image/фон.jpg);
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+  background-position: -35px -265px;
 }
 
 code {
