--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,8 +1,8 @@
 .section {
   max-width: 1024px;
   padding: 20px;
-  /* margin-right: auto; */
-  /* margin-left: auto; */
+  margin-right: auto;
+  margin-left: auto;
   /* text-align: center; */
 }
 
