--- a/src/view/PhonebookView/PhonebookView.module.css
+++ b/src/view/PhonebookView/PhonebookView.module.css
@@ -1,6 +1,6 @@
 .block {
   max-width: 275px;
-  height: 580px;
+  /* height: 580px; */
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
